@startuml PsychologicalTests Class Diagram

scale 1.2

left to right direction

skinparam monochrome true

skinparam shadowing false

skinparam backgroundColor white

skinparam defaultFontColor black

skinparam ranksep 0.9

skinparam nodesep 0.8

skinparam linetype ortho

hide empty members

hide circle

hide stereotype

skinparam classAttributeIconSize 0

skinparam classVisibilityIconSize 0

skinparam class {

    AttributeFontSize 9

    FontSize 10

    Padding 6

    BackgroundColor white

    BorderColor black

    ArrowColor black

    BorderThickness 1

}

skinparam defaultFontSize 10

abstract class BaseTest {

  +{abstract} getType(): QString

}

class Test {

  -id: int

  -name: QString

  -questions: vector<Question>

  -results: vector<TestResult>

  +getId(): int

  +getName(): QString

  +getQuestions(): vector<Question>

  +getResults(): vector<TestResult>

  +setName(QString)

  +addQuestion(Question)

  +addResult(TestResult)

  +removeQuestion(int)

  +operator==(Test): bool

  +operator!=(Test): bool

  +operator=(Test): Test&

  +getType(): QString

}

class Question {

  -id: int

  -text: QString

  -answers: vector<Answer>

  +getId(): int

  +getText(): QString

  +getAnswers(): vector<Answer>

  +setText(QString)

  +addAnswer(Answer)

  +operator==(Question): bool

  +operator!=(Question): bool

}

class Answer {

  -type: AnswerType

  -score: int

  +getType(): AnswerType

  +getScore(): int

  +getTypeString(): QString

  +operator==(Answer): bool

  +operator!=(Answer): bool

}

enum AnswerType {

  YES

  NO

  UNSURE

}

class TestResult {

  -testId: int

  -userName: QString

  -score: int

  -resultText: QString

  -dateTime: QDateTime

  -answers: vector<AnswerType>

  +getTestId(): int

  +getUserName(): QString

  +getScore(): int

  +getResultText(): QString

  +getDateTime(): QDateTime

  +getAnswers(): vector<AnswerType>

  +setResultText(QString)

  +setDateTime(QDateTime)

  +addAnswer(AnswerType)

  +getResultDescription(): QString

}

class Statistics {

  -questionStats: map<int, QuestionStats>

  -totalTests: int

  -totalAnswers: int

  +collectStatistics(Test): void

  +getQuestionStats(int): QuestionStats

  +getAllStats(): map<int, QuestionStats>

  +getTotalTests(): int

  +getTotalAnswers(): int

}

class QuestionStats {

  <<struct>>

  +totalAnswers: int

  +yesCount: int

  +noCount: int

  +unsureCount: int

  +yesPercent: double

  +noPercent: double

  +unsurePercent: double

}

class FileManager {

  +{static} getProjectRootDir(): QString

  +{static} getTestQuestionDir(): QString

  +{static} getTestAnswerDir(): QString

  +{static} getStatisticsDir(): QString

  +{static} saveTestToFile(Test, QString): void

  +{static} loadTestFromFile(QString): Test

  +{static} saveResultToFile(TestResult, QString): void

  +{static} loadResultFromFile(QString): TestResult

  +{static} saveResultAutomatically(TestResult): void

  +{static} loadAllResultsForTest(int): vector<TestResult>

  +{static} saveStatisticsAutomatically(Test): void

  +{static} loadAllTests(QString): vector<Test>

  +{static} validateFile(QString): void

}

class FileException {

  -message: QString

  +what(): const char*

}

class ColorPalette {

  +{static} lightTeal(): QColor

  +{static} lightYellow(): QColor

  +{static} lightPink(): QColor

  +{static} paleBlue(): QColor

  +{static} lightPeach(): QColor

  +{static} dustyRose(): QColor

  +{static} lightOrange(): QColor

  +{static} paleYellow(): QColor

  +{static} veryLightPink(): QColor

  +{static} addButtonColor(): QColor

  +{static} deleteButtonColor(): QColor

  +{static} actionButtonColor(): QColor

  +{static} backgroundColor(): QColor

  +{static} windowBackground(): QColor

}

class ContainerIterator<T> {

  -container_: vector<T>&

  +begin(): iterator

  +end(): iterator

  +begin(): const_iterator

  +end(): const_iterator

  +cbegin(): const_iterator

  +cend(): const_iterator

}

class MainWindow {

  -tableWidget: QTableWidget*

  -addButton: QPushButton*

  -tests: vector<Test>

  -nextTestId: int

  -addTestWindow: AddTestWindow*

  -statisticsWindow: StatisticsWindow*

  -testWindow: TestWindow*

  +MainWindow(QWidget*)

  +onAddTestClicked(): void

  +onDeleteTestClicked(int): void

  +onTakeTestClicked(int): void

  +onViewStatisticsClicked(int): void

  +refreshTable(): void

  -setupUI(): void

  -loadTests(): void

  -saveTests(): void

  -findTest(int): Test*

  -getNextTestId(): int

}

class AddTestWindow {

  -nameEdit: QLineEdit*

  -questionsList: QListWidget*

  -questionTextEdit: QTextEdit*

  -addQuestionButton: QPushButton*

  -removeQuestionButton: QPushButton*

  -addFromFileButton: QPushButton*

  -saveButton: QPushButton*

  -cancelButton: QPushButton*

  -questions: vector<QString>

  -nextQuestionId: int

  -testId: int

  +AddTestWindow(int, QWidget*)

  +AddTestWindow(QWidget*)

  +testAdded(Test): void

  +onAddFromFileClicked(): void

  +onAddQuestionClicked(): void

  +onRemoveQuestionClicked(): void

  +onSaveTestClicked(): void

  -setupUI(): void

  -clearForm(): void

  -validateTest(): bool

}

class TestWindow {

  -test: Test&

  -currentResult: TestResult

  -currentQuestionIndex: int

  -testStarted: bool

  -welcomeLabel: QLabel*

  -nameEdit: QLineEdit*

  -startButton: QPushButton*

  -questionLabel: QLabel*

  -progressBar: QProgressBar*

  -yesButton: QPushButton*

  -noButton: QPushButton*

  -unsureButton: QPushButton*

  -progressLabel: QLabel*

  -resultsWindow: ResultsWindow*

  +TestWindow(Test&, QWidget*)

  +testCompleted(TestResult): void

  +keyPressEvent(QKeyEvent*): void

  +onStartTestClicked(): void

  +onAnswerClicked(AnswerType): void

  -setupUI(): void

  -showQuestion(): void

  -finishTest(): void

  -showResults(): void

}

class ResultsWindow {

  -result: TestResult

  -test: Test&

  +ResultsWindow(TestResult&, Test&, QWidget*)

  +onSaveClicked(): void

  -setupUI(): void

}

class StatisticsWindow {

  -test: Test&

  -statistics: Statistics

  -statsTable: QTableWidget*

  -chartWidget: ChartWidget*

  +StatisticsWindow(Test&, QWidget*)

  -setupUI(): void

  -updateStatistics(): void

}

class ChartWidget {

  -yesPercent: double

  -noPercent: double

  -unsurePercent: double

  +ChartWidget(QWidget*)

  +setData(double, double, double): void

  +paintEvent(QPaintEvent*): void

  -drawLegend(QPainter&, int, int, int): void

}

BaseTest <|-- Test

Test "1" *-- "0..*" Question : contains

Question "1" *-- "0..*" Answer : contains

Answer ..> AnswerType : uses

Test "1" *-- "0..*" TestResult : contains

TestResult ..> AnswerType : uses

Test ..> Statistics : uses

Statistics "1" +-- "0..*" QuestionStats : contains

FileManager ..> Test : manages

FileManager ..> TestResult : manages

FileManager ..> FileException : throws

MainWindow "1" *-- "0..*" Test : contains

MainWindow "1" *-- "0..1" AddTestWindow : manages

MainWindow "1" *-- "0..1" StatisticsWindow : manages

MainWindow "1" *-- "0..1" TestWindow : manages

MainWindow ..> FileManager : uses

AddTestWindow ..> Test

AddTestWindow ..> Question

AddTestWindow ..> FileManager

TestWindow ..> Test

TestWindow ..> TestResult

TestWindow ..> ResultsWindow

TestWindow ..> AnswerType

TestWindow ..> FileManager

ResultsWindow ..> TestResult

ResultsWindow ..> Test

ResultsWindow ..> FileManager

StatisticsWindow ..> Test

StatisticsWindow ..> Statistics

StatisticsWindow *-- ChartWidget

StatisticsWindow ..> FileManager


@enduml

